# google-hashcode-score-2021

./: .gitignore  Cargo.toml  README.md  bench.md
src/: cli.rs  data.rs  main.rs  parser.rs  score.rs
