[package]
name = "google-hashcode-template"
version = "0.1.0"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ghc2021-score"
path = "src/main.rs"

[dependencies]
nom = "6.1.0"
clap = "2.33.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8.3"
num-format = "0.4.0"
rustc-hash = "1.1.0"

[profile.release]
debug = true